# QQbot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml
src/plugins/: groupmember.py
src/plugins/kaggle/: 2022-10-07.csv  2022-10-08.csv  __init__.py  api.ipynb  api.py
src/plugins/nucleic/: __init__.py  feishu.py
